Update MNIST example w.r.t. KFP 2.5.0

--- a/Data-Science/Kubeflow/MNIST-Digits-Recognition/mnist_katib_tf_kserve_example.ipynb
+++ b/Data-Science/Kubeflow/MNIST-Digits-Recognition/mnist_katib_tf_kserve_example.ipynb
@@ -41,7 +41,8 @@
     "# %env https_proxy=http://<proxy_host>:<port>\n",
     "# Install required packages (Kubeflow Pipelines and Katib SDK).\n",
     "import sys\n",
-    "!{sys.executable} -m pip install \"pyarrow>7.0.0\" \"kfp>=1.8.0,<=1.8.22\" kubeflow-katib==0.16.0"
+    "# !{sys.executable} -m pip install \"pyarrow>7.0.0\" \"kfp>=1.8.0,<=1.8.22\" kubeflow-katib==0.16.0\n",
+    "!{sys.executable} -m pip install kfp[kubernetes]"
    ]
   },
   {
@@ -67,6 +68,7 @@
     "import kfp\n",
     "import kfp.dsl as dsl\n",
     "from kfp import components\n",
+    "from kfp import kubernetes\n",
     "from kubeflow.katib import ApiClient\n",
     "from kubeflow.katib import V1beta1ExperimentSpec\n",
     "from kubeflow.katib import V1beta1AlgorithmSpec\n",
@@ -372,10 +374,13 @@
    "outputs": [],
    "source": [
     "# This function converts Katib Experiment HP results to args.\n",
-    "def convert_katib_results(katib_results) -> str:\n",
+    "\n",
+    "from kfp import components\n",
+    "@dsl.component(base_image=\"gcr.io/mapr-252711/kubeflow/notebooks/jupyter-tensorflow-full:ezua-1.4.0-aff5aff5\")\n",
+    "def convert_katib_results(katib_results: dict) -> str:\n",
     "    import json\n",
     "    import pprint\n",
-    "    katib_results_json = json.loads(katib_results)\n",
+    "    katib_results_json = katib_results\n",
     "    print(\"Katib results:\")\n",
     "    pprint.pprint(katib_results_json)\n",
     "    best_hps = []\n",
@@ -392,8 +397,7 @@
     "    import json\n",
     "    # Get parameters from the Katib Experiment.\n",
     "    # Parameters are in the format \"--tf-learning-rate=0.01 --tf-batch-size=100\"\n",
-    "    convert_katib_results_op = components.func_to_container_op(convert_katib_results)\n",
-    "    best_hp_op = convert_katib_results_op(katib_op.output)\n",
+    "    best_hp_op = convert_katib_results(katib_results = katib_op.output)\n",
     "    best_hps = str(best_hp_op.output)\n",
     "\n",
     "    # Create the TFJob Chief and Worker specification with the best Hyperparameters.\n",
@@ -440,7 +444,7 @@
     "                    {\n",
     "                        \"name\": \"model-volume\",\n",
     "                        \"persistentVolumeClaim\": {\n",
-    "                            \"claimName\": str(model_volume_op.outputs[\"name\"])\n",
+    "                            \"claimName\": f\"model-volume-{uuid}\"\n",
     "                        }\n",
     "                    },\n",
     "                    {\n",
@@ -497,7 +501,7 @@
     "                    {\n",
     "                        \"name\": \"model-volume\",\n",
     "                        \"persistentVolumeClaim\": {\n",
-    "                            \"claimName\": str(model_volume_op.outputs[\"name\"])\n",
+    "                            \"claimName\": f\"model-volume-{uuid}\"\n",
     "                        }\n",
     "                    },\n",
     "                    {\n",
@@ -543,14 +547,14 @@
     "      apiVersion: \"{api_version}\"\n",
     "      kind: \"InferenceService\"\n",
     "      metadata:\n",
-    "        name: {model_name}\n",
-    "        namespace: {model_namespace}\n",
+    "        name: {name}\n",
+    "        namespace: {namespace}\n",
     "        annotations:\n",
     "          \"sidecar.istio.io/inject\": \"false\"\n",
     "      spec:\n",
     "        predictor:\n",
     "          tensorflow:\n",
-    "            storageUri: \"pvc://{str(model_volume_op.outputs[\"name\"])}/\"\n",
+    "            storageUri: \"pvc://model-volume-{uuid}/\"\n",
     "      '''\n",
     "\n",
     "    serving_launcher_op = components.load_component_from_file(serving_component_url)\n",
@@ -568,7 +572,9 @@
     "    name=name,\n",
     "    description=\"An end to end mnist example including hyperparameter tuning, train and inference\"\n",
     ")\n",
-    "def mnist_pipeline(name=name, namespace=namespace, training_steps=training_steps):\n",
+    "# def mnist_pipeline(name: str, namespace: str, training_steps: int):\n",
+    "def mnist_pipeline(name: str, namespace: str):\n",
+    "# def mnist_pipeline(name=name, namespace=namespace, training_steps=training_steps):\n",
     "\n",
     "    # Run the hyperparameter tuning with Katib.\n",
     "    katib_op = create_katib_experiment_task(name, namespace, training_steps)\n",
@@ -576,11 +582,11 @@
     "    volume_str = f\"model-volume-{uuid}\"\n",
     "    \n",
     "    # Create volume to train and serve the model.\n",
-    "    model_volume_op = dsl.VolumeOp(\n",
-    "        name=volume_str,\n",
-    "        resource_name=volume_str,\n",
+    "    model_volume_op = kfp.kubernetes.CreatePVC(\n",
+    "        pvc_name=volume_str,\n",
     "        size=\"1Gi\",\n",
-    "        modes=dsl.VOLUME_MODE_RWO\n",
+    "        storage_class_name=\"<storage_class_name>\",\n",
+    "        access_modes=['ReadWriteOnce'],\n",
     "    )\n",
     "\n",
     "    # Run the distributive training with TFJob.\n",
@@ -589,10 +595,11 @@
     "    # Create the KServe inference.\n",
     "    create_serving_task(name, namespace, tfjob_op, model_volume_op)\n",
     "    print(\"Volume: \", volume_str)\n",
-    "    \n",
-    "# Run the Kubeflow Pipeline in the user's namespace.\n",
-    "run_id = kfp_client.create_run_from_pipeline_func(mnist_pipeline, namespace=namespace, arguments={}).run_id\n",
     "\n",
+    "# Run the Kubeflow Pipeline in the user's namespace.\n",
+    "run_id = kfp_client.create_run_from_pipeline_func(pipeline_func=mnist_pipeline, namespace=namespace, \n",
+    "                                                  arguments={\"name\": name,\n",
+    "                                                             \"namespace\" : namespace}).run_id\n",
     "print(f\"Run ID: {run_id}\")\n",
     "\n",
     "kfp_client.wait_for_run_completion(run_id=run_id, timeout=36000)"
@@ -611,7 +618,7 @@
     "\n",
     "# Pipeline Run should be succeeded.\n",
     "kfp_run = kfp_client.get_run(run_id=run_id)\n",
-    "if kfp_run.run.status == \"Succeeded\":\n",
+    "if kfp_run.state == 'SUCCEEDED':\n",
     "    print(f\"Run {run_id} has been Succeeded\\n\")\n",
     "\n",
     "    # Specify the image URL here.\n",
