--- a/Data-Science/Kubeflow/MNIST-Digits-Recognition/mnist_katib_tf_kserve_example.ipynb
+++ b/Data-Science/Kubeflow/MNIST-Digits-Recognition/mnist_katib_tf_kserve_example.ipynb
@@ -618,7 +618,7 @@
     "\n",
     "# Pipeline Run should be succeeded.\n",
     "kfp_run = kfp_client.get_run(run_id=run_id)\n",
-    "if kfp_run.state == 'SUCCEEDED':\n",
+    "if kfp_run.state == \"SUCCEEDED\":\n",
     "    print(f\"Run {run_id} has been Succeeded\\n\")\n",
     "\n",
     "    # Specify the image URL here.\n",
