--- a/Data-Science/Kubeflow/MNIST-Digits-Recognition/mnist_katib_tf_kserve_example.ipynb
+++ b/Data-Science/Kubeflow/MNIST-Digits-Recognition/mnist_katib_tf_kserve_example.ipynb
@@ -41,7 +41,6 @@
     "# %env https_proxy=http://<proxy_host>:<port>\n",
     "# Install required packages (Kubeflow Pipelines and Katib SDK).\n",
     "import sys\n",
-    "# !{sys.executable} -m pip install \"pyarrow>7.0.0\" \"kfp>=1.8.0,<=1.8.22\" kubeflow-katib==0.16.0\n",
     "!{sys.executable} -m pip install kfp[kubernetes]"
    ]
   },
@@ -101,7 +100,7 @@
     "\n",
     "# Number of epoch to train the model\n",
     "training_steps=\"100\"\n",
-    "\n",
+    "volume_str = f\"model-volume-{uuid}\"\n",
     "\n",
     "kfp_client = kfp.Client()\n",
     "namespace = kfp_client.get_user_namespace()"
@@ -376,7 +375,10 @@
     "# This function converts Katib Experiment HP results to args.\n",
     "\n",
     "from kfp import components\n",
-    "@dsl.component(base_image=\"gcr.io/mapr-252711/kubeflow/notebooks/jupyter-tensorflow-full:ezua-1.4.0-aff5aff5\")\n",
+    "@dsl.component(\n",
+    "    install_kfp_package = False,\n",
+    "    base_image = \"gcr.io/mapr-252711/kubeflow/python-kfp:3.7-2.7.0\",\n",
+    ")\n",
     "def convert_katib_results(katib_results: dict) -> str:\n",
     "    import json\n",
     "    import pprint\n",
@@ -444,7 +446,7 @@
     "                    {\n",
     "                        \"name\": \"model-volume\",\n",
     "                        \"persistentVolumeClaim\": {\n",
-    "                            \"claimName\": f\"model-volume-{uuid}\"\n",
+    "                            \"claimName\": f\"{volume_str}\"\n",
     "                        }\n",
     "                    },\n",
     "                    {\n",
@@ -501,7 +503,7 @@
     "                    {\n",
     "                        \"name\": \"model-volume\",\n",
     "                        \"persistentVolumeClaim\": {\n",
-    "                            \"claimName\": f\"model-volume-{uuid}\"\n",
+    "                            \"claimName\": f\"{volume_str}\"\n",
     "                        }\n",
     "                    },\n",
     "                    {\n",
@@ -554,7 +556,7 @@
     "      spec:\n",
     "        predictor:\n",
     "          tensorflow:\n",
-    "            storageUri: \"pvc://model-volume-{uuid}/\"\n",
+    "            storageUri: \"pvc://{volume_str}/\"\n",
     "      '''\n",
     "\n",
     "    serving_launcher_op = components.load_component_from_file(serving_component_url)\n",
@@ -572,14 +574,11 @@
     "    name=name,\n",
     "    description=\"An end to end mnist example including hyperparameter tuning, train and inference\"\n",
     ")\n",
-    "# def mnist_pipeline(name: str, namespace: str, training_steps: int):\n",
+    "\n",
     "def mnist_pipeline(name: str, namespace: str):\n",
-    "# def mnist_pipeline(name=name, namespace=namespace, training_steps=training_steps):\n",
     "\n",
     "    # Run the hyperparameter tuning with Katib.\n",
     "    katib_op = create_katib_experiment_task(name, namespace, training_steps)\n",
-    "\n",
-    "    volume_str = f\"model-volume-{uuid}\"\n",
     "    \n",
     "    # Create volume to train and serve the model.\n",
     "    model_volume_op = kfp.kubernetes.CreatePVC(\n",
