--- a/Data-Science/Kubeflow/MNIST-Digits-Recognition/mnist_katib_tf_kserve_example.ipynb
+++ b/Data-Science/Kubeflow/MNIST-Digits-Recognition/mnist_katib_tf_kserve_example.ipynb
@@ -52,7 +52,8 @@
    "outputs": [],
    "source": [
     "# Specify the name of the user mounted directory\n",
-    "user_mounted_dir_name = \"user\""
+    "user_mounted_dir_name = \"user\"\n",
+    "airgap_registry=\"lr1-bd-harbor-registry.mip.storage.hpecorp.net/develop/\""
    ]
   },
   {
@@ -377,7 +378,7 @@
     "from kfp import components\n",
     "@dsl.component(\n",
     "    install_kfp_package = False,\n",
-    "    base_image = \"gcr.io/mapr-252711/kubeflow/python-kfp:3.7-2.7.0\",\n",
+    "    base_image = f\"{airgap_registry}gcr.io/mapr-252711/kubeflow/python-kfp:3.7-2.7.0\",\n",
     ")\n",
     "def convert_katib_results(katib_results: dict) -> str:\n",
     "    import json\n",
@@ -446,7 +447,7 @@
     "                    {\n",
     "                        \"name\": \"model-volume\",\n",
     "                        \"persistentVolumeClaim\": {\n",
-    "                            \"claimName\": f\"{volume_str}\"\n",
+    "                            \"claimName\": volume_str\n",
     "                        }\n",
     "                    },\n",
     "                    {\n",
@@ -503,7 +504,7 @@
     "                    {\n",
     "                        \"name\": \"model-volume\",\n",
     "                        \"persistentVolumeClaim\": {\n",
-    "                            \"claimName\": f\"{volume_str}\"\n",
+    "                            \"claimName\": volume_str\n",
     "                        }\n",
     "                    },\n",
     "                    {\n",
