Setting the no_proxy and storage_class configuration

--- a/Data-Science/Kubeflow/MNIST-Digits-Recognition/mnist_katib_tf_kserve_example.ipynb
+++ b/Data-Science/Kubeflow/MNIST-Digits-Recognition/mnist_katib_tf_kserve_example.ipynb
@@ -39,6 +39,8 @@
    "source": [
     "# Uncomment & specify proxy value if applicable\n",
     "# %env https_proxy=http://<proxy_host>:<port>\n",
+    "# Comma separated list of IP address\n",
+    "# %env no_proxy=\"<host1>:<port1>,<host2>:<port2>,...\"\" \n",
     "# Install required packages (Kubeflow Pipelines and Katib SDK).\n",
     "import sys\n",
     "!{sys.executable} -m pip install kfp[kubernetes]"
@@ -580,12 +582,13 @@
     "\n",
     "    # Run the hyperparameter tuning with Katib.\n",
     "    katib_op = create_katib_experiment_task(name, namespace, training_steps)\n",
-    "    \n",
+    "    # Getting the storage class\n",
+    "    storage_class_name = !kubectl get pvc user-pvc -o jsonpath={.spec.storageClassName}\n",
     "    # Create volume to train and serve the model.\n",
     "    model_volume_op = kfp.kubernetes.CreatePVC(\n",
     "        pvc_name=volume_str,\n",
     "        size=\"1Gi\",\n",
-    "        storage_class_name=\"<storage_class_name>\",\n",
+    "        storage_class_name=storage_class_name[0],\n",
     "        access_modes=['ReadWriteOnce'],\n",
     "    )\n",
     "\n",
