Adding airgap_registry from environment and comments for no_proxy

--- a/Data-Science/Kubeflow/MNIST-Digits-Recognition/mnist_katib_tf_kserve_example.ipynb
+++ b/Data-Science/Kubeflow/MNIST-Digits-Recognition/mnist_katib_tf_kserve_example.ipynb
@@ -39,8 +39,8 @@
    "source": [
     "# Uncomment & specify proxy value if applicable\n",
     "# %env https_proxy=http://<proxy_host>:<port>\n",
-    "# Comma separated list of IP address\n",
-    "# %env no_proxy=\"<host1>:<port1>,<host2>:<port2>,...\"\" \n",
+    "# After default.svc append comma separated list of IP address, hostname, CIDR block, service name, etc.\n",
+    "# %env no_proxy=\"localhost,.cluster.local,.svc,.default.svc, <host>:<port>, x.x.x.x/y,...\"\n",
     "# Install required packages (Kubeflow Pipelines and Katib SDK).\n",
     "import sys\n",
     "!{sys.executable} -m pip install kfp[kubernetes]"
@@ -54,8 +54,7 @@
    "outputs": [],
    "source": [
     "# Specify the name of the user mounted directory\n",
-    "user_mounted_dir_name = \"user\"\n",
-    "airgap_registry=\"lr1-bd-harbor-registry.mip.storage.hpecorp.net/develop/\""
+    "user_mounted_dir_name = \"user\""
    ]
   },
   {
@@ -380,7 +379,7 @@
     "from kfp import components\n",
     "@dsl.component(\n",
     "    install_kfp_package = False,\n",
-    "    base_image = f\"{airgap_registry}gcr.io/mapr-252711/kubeflow/python-kfp:3.7-2.7.0\",\n",
+    "    base_image = f\"{os.environ['AIRGAP_REGISTRY']}gcr.io/mapr-252711/kubeflow/python-kfp:3.7-2.7.0\",\n",
     ")\n",
     "def convert_katib_results(katib_results: dict) -> str:\n",
     "    import json\n",
