demos/retail: Remove the data version control section
EzUA 1.4.0 does not have a `discovery` option under the "Hive
Metadatastore" dropdown menu. To make the example work within EzUA 1.4.0
we need to create a new Hive connection. However, contrary to a Delta
Lake connection, Hive does not support data versioning.

Remove the data version control section from the second Notebook. Making
it work with data version control and Delta Lake becomes a TODO action.

Signed-off-by: Dimitris Poulopoulos <dimitris.poulopoulos@hpe.com>

--- a/demos/smart-retail/02.query_with_ezpreso.ipynb
+++ b/demos/smart-retail/02.query_with_ezpreso.ipynb
@@ -80,7 +80,7 @@
     "1. Navigate back to the Unified Analytics dashboard.\n",
     "1. In the sidebar navigation menu, select `Data Engineering` > `Data Sources`.\n",
     "1. Under the `Structured Data` tab, click `Add New Data Source`.\n",
-    "1. Under **Delta Lake**, click `Create Connection`."
+    "1. Under **Hive**, click `Create Connection`."
    ]
   },
   {
@@ -91,7 +91,7 @@
    },
    "source": [
     "- **Name**: `retail`\n",
-    "- **Hive Metastore:** `file`\n",
+    "- **Hive Metastore:** `discovery`\n",
     "- **Data Dir:** `file:/data/shared/retail-data/delta-tables`\n",
     "- **File Type:** `PARQUET`\n",
     "5. Click `Connect`.\n",
