Updated the PVC creation method

--- a/Data-Science/Kubeflow/MNIST-Digits-Recognition/mnist_katib_tf_kserve_example.ipynb
+++ b/Data-Science/Kubeflow/MNIST-Digits-Recognition/mnist_katib_tf_kserve_example.ipynb
@@ -104,6 +104,10 @@
     "training_steps=\"100\"\n",
     "volume_str = f\"model-volume-{uuid}\"\n",
     "\n",
+    "# Create volume to train and serve the model.\n",
+    "!sed -e \"s/pvc-name/$volume_str/\" ./pvc.yaml > /tmp/pvc.yaml\n",
+    "!kubectl apply -f /tmp/pvc.yaml\n",
+    "\n",
     "kfp_client = kfp.Client()\n",
     "namespace = kfp_client.get_user_namespace()"
    ]
@@ -581,15 +585,8 @@
     "\n",
     "    # Run the hyperparameter tuning with Katib.\n",
     "    katib_op = create_katib_experiment_task(name, namespace, training_steps)\n",
-    "    # Getting the storage class\n",
-    "    storage_class_name = !kubectl get pvc user-pvc -o jsonpath={.spec.storageClassName}\n",
-    "    # Create volume to train and serve the model.\n",
-    "    model_volume_op = kfp.kubernetes.CreatePVC(\n",
-    "        pvc_name=volume_str,\n",
-    "        size=\"1Gi\",\n",
-    "        storage_class_name=storage_class_name[0],\n",
-    "        access_modes=['ReadWriteOnce'],\n",
-    "    )\n",
+    "\n",
+    "    model_volume_op =  volume_str\n",
     "\n",
     "    # Run the distributive training with TFJob.\n",
     "    tfjob_op = create_tfjob_task(name, namespace, training_steps, katib_op, model_volume_op)\n",
