Removed the kfp[kubernetes] package install step

--- a/Data-Science/Kubeflow/MNIST-Digits-Recognition/mnist_katib_tf_kserve_example.ipynb
+++ b/Data-Science/Kubeflow/MNIST-Digits-Recognition/mnist_katib_tf_kserve_example.ipynb
@@ -41,9 +41,7 @@
     "# %env https_proxy=http://<proxy_host>:<port>\n",
     "# After default.svc append comma separated list of IP address, hostname, CIDR block, service name, etc.\n",
     "# %env no_proxy=\"localhost,.cluster.local,.svc,.default.svc, <host>:<port>, x.x.x.x/y,...\"\n",
-    "# Install required packages (Kubeflow Pipelines and Katib SDK).\n",
-    "import sys\n",
-    "!{sys.executable} -m pip install kfp[kubernetes]"
+    "# Install required packages (Kubeflow Pipelines and Katib SDK)."
    ]
   },
   {
