Updated the proxy and no_proxy for the component.

--- a/Data-Science/Kubeflow/MNIST-Digits-Recognition/mnist_katib_tf_kserve_example.ipynb
+++ b/Data-Science/Kubeflow/MNIST-Digits-Recognition/mnist_katib_tf_kserve_example.ipynb
@@ -38,9 +38,13 @@
    "outputs": [],
    "source": [
     "# Uncomment & specify proxy value if applicable\n",
-    "# %env https_proxy=http://<proxy_host>:<port>\n",
+    "# http_proxy=http://<proxy_host>:<port>\n",
+    "# %env https_proxy={http_proxy}\n",
     "# After default.svc append comma separated list of IP address, hostname, CIDR block, service name, etc.\n",
-    "# %env no_proxy=\"localhost,.cluster.local,.svc,.default.svc, <host>:<port>, x.x.x.x/y,...\"\n",
+    "# no_proxy=\"localhost,.cluster.local,.svc,.default.svc, <host>:<port>, x.x.x.x/y,...\"\n",
+    "# no_proxy += ',.kubeflow'\n",
+    "# %env no_proxy={no_proxy}\n",
+    "\n",
     "# Install required packages (Kubeflow Pipelines and Katib SDK)."
    ]
   },
@@ -378,10 +382,7 @@
     "# This function converts Katib Experiment HP results to args.\n",
     "\n",
     "from kfp import components\n",
-    "@dsl.component(\n",
-    "    install_kfp_package = False,\n",
-    "    base_image = f\"{os.environ['AIRGAP_REGISTRY']}gcr.io/mapr-252711/kubeflow/python-kfp:3.7-2.7.0\",\n",
-    ")\n",
+    "@dsl.component\n",
     "def convert_katib_results(katib_results: dict) -> str:\n",
     "    import json\n",
     "    import pprint\n",
@@ -403,6 +404,14 @@
     "    # Get parameters from the Katib Experiment.\n",
     "    # Parameters are in the format \"--tf-learning-rate=0.01 --tf-batch-size=100\"\n",
     "    best_hp_op = convert_katib_results(katib_results = katib_op.output)\n",
+    "    # Setting the proxy and no_proxy to allow download of the required packages inside the component. \n",
+    "    best_hp_op.set_caching_options(False)\n",
+    "    best_hp_op.set_env_variable('http_proxy', http_proxy)\n",
+    "    best_hp_op.set_env_variable('https_proxy', http_proxy)\n",
+    "    best_hp_op.set_env_variable('no_proxy', no_proxy)\n",
+    "    best_hp_op.set_env_variable('HTTP_PROXY', http_proxy)\n",
+    "    best_hp_op.set_env_variable('HTTPS_PROXY', http_proxy)\n",
+    "    best_hp_op.set_env_variable('NO_PROXY', no_proxy)\n",
     "    best_hps = str(best_hp_op.output)\n",
     "\n",
     "    # Create the TFJob Chief and Worker specification with the best Hyperparameters.\n",
