--- a/Data-Science/Kubeflow/MNIST-Digits-Recognition/mnist_katib_tf_kserve_example.ipynb
+++ b/Data-Science/Kubeflow/MNIST-Digits-Recognition/mnist_katib_tf_kserve_example.ipynb
@@ -404,14 +404,14 @@
     "    # Get parameters from the Katib Experiment.\n",
     "    # Parameters are in the format \"--tf-learning-rate=0.01 --tf-batch-size=100\"\n",
     "    best_hp_op = convert_katib_results(katib_results = katib_op.output)\n",
-    "    # Setting the proxy and no_proxy to allow download of the required packages inside the component. \n",
-    "    best_hp_op.set_caching_options(False)\n",
-    "    best_hp_op.set_env_variable('http_proxy', http_proxy)\n",
-    "    best_hp_op.set_env_variable('https_proxy', http_proxy)\n",
-    "    best_hp_op.set_env_variable('no_proxy', no_proxy)\n",
-    "    best_hp_op.set_env_variable('HTTP_PROXY', http_proxy)\n",
-    "    best_hp_op.set_env_variable('HTTPS_PROXY', http_proxy)\n",
-    "    best_hp_op.set_env_variable('NO_PROXY', no_proxy)\n",
+    "    # Setting the proxy and no_proxy to allow download of the required packages inside the component. Uncomment the below code, if proxies are specified above.\n",
+    "    # best_hp_op.set_caching_options(False)\n",
+    "    # best_hp_op.set_env_variable('http_proxy', http_proxy)\n",
+    "    # best_hp_op.set_env_variable('https_proxy', http_proxy)\n",
+    "    # best_hp_op.set_env_variable('no_proxy', no_proxy)\n",
+    "    # best_hp_op.set_env_variable('HTTP_PROXY', http_proxy)\n",
+    "    # best_hp_op.set_env_variable('HTTPS_PROXY', http_proxy)\n",
+    "    # best_hp_op.set_env_variable('NO_PROXY', no_proxy)\n",
     "    best_hps = str(best_hp_op.output)\n",
     "\n",
     "    # Create the TFJob Chief and Worker specification with the best Hyperparameters.\n",
