Added the proxy to the component

--- a/Data-Science/Kubeflow/MNIST-Digits-Recognition/mnist_katib_tf_kserve_example.ipynb
+++ b/Data-Science/Kubeflow/MNIST-Digits-Recognition/mnist_katib_tf_kserve_example.ipynb
@@ -37,11 +37,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Uncomment & specify proxy value if applicable\n",
-    "# http_proxy=http://<proxy_host>:<port>\n",
+    "# Specify proxy and no_proxy value if applicable\n",
+    "http_proxy=\"\" ## \"http://<proxy_host>:<port>\"\n",
     "# After default.svc append comma separated list of IP address, hostname, CIDR block, service name, etc.\n",
-    "# no_proxy=\"localhost,.cluster.local,.svc,.default.svc, <host>:<port>, x.x.x.x/y,...\"\n",
-    "# no_proxy += ',.kubeflow'\n",
+    "no_proxy=\"\" ## \"localhost,.cluster.local,.svc,.default.svc, <host>:<port>, x.x.x.x/y,...\"\n",
     "\n",
     "# Install required packages (Kubeflow Pipelines and Katib SDK)."
    ]
@@ -397,19 +396,23 @@
     "    return \" \".join(best_hps)\n",
     "\n",
     "# You should define the TFJob name, namespace, number of training steps, output of Katib and model volume tasks in the arguments.\n",
-    "def create_tfjob_task(tfjob_name, tfjob_namespace, training_steps, katib_op, model_volume_op):\n",
+    "def create_tfjob_task(tfjob_name, tfjob_namespace, training_steps, katib_op, model_volume_op, http_proxy, no_proxy):\n",
     "    import json\n",
     "    # Get parameters from the Katib Experiment.\n",
     "    # Parameters are in the format \"--tf-learning-rate=0.01 --tf-batch-size=100\"\n",
     "    best_hp_op = convert_katib_results(katib_results = katib_op.output)\n",
     "    # Setting the proxy and no_proxy to allow download of the required packages inside the component. Uncomment the below code, if proxies are specified above.\n",
-    "    # best_hp_op.set_caching_options(False)\n",
-    "    # best_hp_op.set_env_variable('http_proxy', http_proxy)\n",
-    "    # best_hp_op.set_env_variable('https_proxy', http_proxy)\n",
-    "    # best_hp_op.set_env_variable('no_proxy', no_proxy)\n",
-    "    # best_hp_op.set_env_variable('HTTP_PROXY', http_proxy)\n",
-    "    # best_hp_op.set_env_variable('HTTPS_PROXY', http_proxy)\n",
-    "    # best_hp_op.set_env_variable('NO_PROXY', no_proxy)\n",
+    "    best_hp_op.set_caching_options(False)\n",
+    "    if no_proxy:\n",
+    "        no_proxy += ',.kubeflow'\n",
+    "        best_hp_op.set_env_variable('no_proxy', no_proxy)\n",
+    "        best_hp_op.set_env_variable('NO_PROXY', no_proxy)\n",
+    "    if http_proxy : \n",
+    "        best_hp_op.set_env_variable('http_proxy', http_proxy)\n",
+    "        best_hp_op.set_env_variable('https_proxy', http_proxy)\n",
+    "        best_hp_op.set_env_variable('HTTP_PROXY', http_proxy)\n",
+    "        best_hp_op.set_env_variable('HTTPS_PROXY', http_proxy)\n",
+    "    \n",
     "    best_hps = str(best_hp_op.output)\n",
     "\n",
     "    # Create the TFJob Chief and Worker specification with the best Hyperparameters.\n",
@@ -593,7 +596,7 @@
     "    model_volume_op =  volume_str\n",
     "\n",
     "    # Run the distributive training with TFJob.\n",
-    "    tfjob_op = create_tfjob_task(name, namespace, training_steps, katib_op, model_volume_op)\n",
+    "    tfjob_op = create_tfjob_task(name, namespace, training_steps, katib_op, model_volume_op, http_proxy, no_proxy)\n",
     "\n",
     "    # Create the KServe inference.\n",
     "    create_serving_task(name, namespace, tfjob_op, model_volume_op)\n",
