Updated the files with comments

--- a/Data-Science/Kubeflow/MNIST-Digits-Recognition/mnist_katib_tf_kserve_example.ipynb
+++ b/Data-Science/Kubeflow/MNIST-Digits-Recognition/mnist_katib_tf_kserve_example.ipynb
@@ -401,8 +401,8 @@
     "    # Get parameters from the Katib Experiment.\n",
     "    # Parameters are in the format \"--tf-learning-rate=0.01 --tf-batch-size=100\"\n",
     "    best_hp_op = convert_katib_results(katib_results = katib_op.output)\n",
-    "    # Setting the proxy and no_proxy to allow download of the required packages inside the component. Uncomment the below code, if proxies are specified above.\n",
     "    best_hp_op.set_caching_options(False)\n",
+    "    # Setting the proxy and no_proxy to allow download of the required packages inside the component.\n",
     "    if no_proxy:\n",
     "        no_proxy += ',.kubeflow'\n",
     "        best_hp_op.set_env_variable('no_proxy', no_proxy)\n",
