Added the code for env var to set the proxy

--- a/Data-Science/Kubeflow/MNIST-Digits-Recognition/mnist_katib_tf_kserve_example.ipynb
+++ b/Data-Science/Kubeflow/MNIST-Digits-Recognition/mnist_katib_tf_kserve_example.ipynb
@@ -143,34 +143,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Uncomment & update the value of the proxies below according to your system settings if applicable. \n",
-    "\n",
-    "env = [\n",
-    "    # {\n",
-    "    #     \"name\": \"HTTP_PROXY\",\n",
-    "    #     \"value\": \"http://<proxy_host>:<port>\"\n",
-    "    # },\n",
-    "    # {\n",
-    "    #     \"name\": \"HTTPS_PROXY\",\n",
-    "    #     \"value\": \"http://<proxy_host>:<port>\"\n",
-    "    # },\n",
-    "    # {\n",
-    "    #     \"name\": \"http_proxy\",\n",
-    "    #     \"value\": \"http://<proxy_host>:<port>\"\n",
-    "    # },\n",
-    "    # {\n",
-    "    #     \"name\": \"https_proxy\",\n",
-    "    #     \"value\": \"http://<proxy_host>:<port>\"\n",
-    "    # },\n",
-    "    # {\n",
-    "    #     \"name\": \"no_proxy\",\n",
-    "    #     \"value\": \"<no_proxy_IPs_list>\"\n",
-    "    # },\n",
-    "    # {\n",
-    "    #     \"name\": \"NO_PROXY\",\n",
-    "    #     \"value\": \"<no_proxy_IPs_list>\"\n",
-    "    # }\n",
-    "]"
+    "env = []\n",
+    "if http_proxy:\n",
+    "    env.append({\"name\": \"HTTP_PROXY\", \"value\":http_proxy})\n",
+    "    env.append({\"name\": \"HTTPS_PROXY\", \"value\":http_proxy})\n",
+    "    env.append({\"name\": \"http_proxy\", \"value\":http_proxy})\n",
+    "    env.append({\"name\": \"https_proxy\", \"value\":http_proxy})\n",
+    "if no_proxy:\n",
+    "    env.append({\"name\": \"no_proxy\", \"value\":no_proxy})\n",
+    "    env.append({\"name\": \"NO_PROXY\", \"value\":no_proxy})"
    ]
   },
   {
