--- a/Data-Science/MLflow/bike-sharing-prediction.ipynb
+++ b/Data-Science/MLflow/bike-sharing-prediction.ipynb
@@ -54,7 +54,7 @@
     "\n",
     "data[\"metadata\"][\"namespace\"] = namespace\n",
     "data[\"metadata\"][\"name\"] = model_name\n",
-    "data['spec']['predictor']['sklearn']['storageUri'] = storage_uri\n",
+    "data['spec']['predictor']['sklearn']['storageUri'] = f\"{storage_uri}/model.pkl\"\n",
     "\n",
     "# Save the JSON data to a file\n",
     "with open('kserve/kserve-mlflow-deploy.json', 'w') as file:\n",
@@ -86,7 +86,7 @@
     "DOMAIN_NAME = \"svc.cluster.local\" # change this to your domain for external access \n",
     "NAMESPACE = namespace\n",
     "DEPLOYMENT_NAME = model_name\n",
-    "MODEL_NAME = \"model\"\n",
+    "MODEL_NAME = model_name\n",
     "SVC = f'{DEPLOYMENT_NAME}-predictor.{NAMESPACE}.{DOMAIN_NAME}'\n",
     "URL = f\"https://{SVC}/v2/models/{MODEL_NAME}/infer\"\n",
     "\n",
