--- a/Data-Science/MLflow/bike-sharing-prediction.ipynb
+++ b/Data-Science/MLflow/bike-sharing-prediction.ipynb
@@ -167,7 +167,7 @@
     "#### Executing Inference Request (Example: Bike Sharing Data)\n",
     "\n",
     "```bash\n",
-    "curl --request POST \"https://$SVC.$NAMESPACE.$DOMAIN/v2/models/model/infer\" -k -H \"Authorization: Bearer $ACCESS_TOKEN\" --header 'Content-Type: application/json' --data-raw '{\"inputs\":[{\"name\":\"ndarray\",\"datatype\":\"FP32\",\"shape\":[2,12],\"data\":[[1, 2, 1, 0, 0, 6, 0, 1, 0.24, 0.2879, 0.81, 0.0000],[1, 5, 1, 0, 0, 6, 1, 1, 0.24, 0.2879, 0.81, 0.0000]]}]}'\n",
+    "curl --request POST \"https://$SVC.$NAMESPACE.$DOMAIN/v2/models/$MODEL_NAME/infer\" -k -H \"Authorization: Bearer $ACCESS_TOKEN\" --header 'Content-Type: application/json' --data-raw '{\"inputs\":[{\"name\":\"ndarray\",\"datatype\":\"FP32\",\"shape\":[2,12],\"data\":[[1, 2, 1, 0, 0, 6, 0, 1, 0.24, 0.2879, 0.81, 0.0000],[1, 5, 1, 0, 0, 6, 1, 1, 0.24, 0.2879, 0.81, 0.0000]]}]}'\n",
     "```\n",
     "\n",
     "#### Renewing Access Token Using Refresh Token (When Necessary)\n",
