added error handling in all examples

--- a/Data-Science/Ray/Ray-GPU/ray-gpu-executor.ipynb
+++ b/Data-Science/Ray/Ray-GPU/ray-gpu-executor.ipynb
@@ -99,7 +99,11 @@
     "        time.sleep(5)\n",
     "    else:\n",
     "        break\n",
-    "print(client.get_job_logs(job_id)) "
+    "try:\n",
+    "    logs = client.get_job_logs(job_id) \n",
+    "    print(logs)\n",
+    "except RuntimeError as e:\n",
+    "    print(f\"Failed to get job logs, please check logs on ray dashboard \")"
    ]
   },
   {
