--- a/Data-Science/Ray/Ray-CPU/Matrix_Multiplication/ray-matrix_multiplication-executor.ipynb
+++ b/Data-Science/Ray/Ray-CPU/Matrix_Multiplication/ray-matrix_multiplication-executor.ipynb
@@ -53,7 +53,11 @@
     "            time.sleep(5)\n",
     "        else:\n",
     "            break\n",
-    "    print(c.get_job_logs(job_id))"
+    "    try:\n",
+    "        logs = c.get_job_logs(job_id) \n",
+    "        print(logs)\n",
+    "    except RuntimeError as e:\n",
+    "        print(f\"Failed to get job logs, please check logs on ray dashboard \")"
    ]
   },
   {
