Update MNIST example w.r.t. KFP 2.5.0 (#187)
* Update MNIST example w.r.t. KFP 2.5.0

* Update mnist_katib_tf_kserve_example.ipynb

* Update mnist_katib_tf_kserve_example.ipynb

* Update mnist_katib_tf_kserve_example.ipynb

* Updating kubeflow-launcher-component.yaml file

* Update kubeflow-launcher-component.yaml

* Update PS Spec type

* Setting the no_proxy and storage_class configuration

* Adding airgap_registry from environment and comments for no_proxy

* Updated the PVC creation method

* Removed the kfp[kubernetes] package install step

* Remove kfp[kubernetes] import

* Updated the proxy and no_proxy for the component.

* Commenting the proxy related code.

* Update mnist_katib_tf_kserve_example.ipynb

* Added the proxy to the component

* Updated the files with comments

* Update kubeflow-launcher-component.yaml

* Update pvc.yaml

* Added the code for env var to set the proxy

--- a/Data-Science/Kubeflow/MNIST-Digits-Recognition/mnist_katib_tf_kserve_example.ipynb
+++ b/Data-Science/Kubeflow/MNIST-Digits-Recognition/mnist_katib_tf_kserve_example.ipynb
@@ -37,11 +37,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Uncomment & specify proxy value if applicable\n",
-    "# %env https_proxy=http://<proxy_host>:<port>\n",
-    "# Install required packages (Kubeflow Pipelines and Katib SDK).\n",
-    "import sys\n",
-    "!{sys.executable} -m pip install \"pyarrow>7.0.0\" \"kfp>=1.8.0,<=1.8.22\" kubeflow-katib==0.16.0"
+    "# Specify proxy and no_proxy value if applicable\n",
+    "http_proxy=\"\" ## \"http://<proxy_host>:<port>\"\n",
+    "# After default.svc append comma separated list of IP address, hostname, CIDR block, service name, etc.\n",
+    "no_proxy=\"\" ## \"localhost,.cluster.local,.svc,.default.svc, <host>:<port>, x.x.x.x/y,...\"\n",
+    "\n",
+    "# Install required packages (Kubeflow Pipelines and Katib SDK)."
    ]
   },
   {
@@ -99,7 +100,11 @@
     "\n",
     "# Number of epoch to train the model\n",
     "training_steps=\"100\"\n",
+    "volume_str = f\"model-volume-{uuid}\"\n",
     "\n",
+    "# Create volume to train and serve the model.\n",
+    "!sed -e \"s/pvc-name/$volume_str/\" ./pvc.yaml > /tmp/pvc.yaml\n",
+    "!kubectl apply -f /tmp/pvc.yaml\n",
     "\n",
     "kfp_client = kfp.Client()\n",
     "namespace = kfp_client.get_user_namespace()"
@@ -138,34 +143,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Uncomment & update the value of the proxies below according to your system settings if applicable. \n",
-    "\n",
-    "env = [\n",
-    "    # {\n",
-    "    #     \"name\": \"HTTP_PROXY\",\n",
-    "    #     \"value\": \"http://<proxy_host>:<port>\"\n",
-    "    # },\n",
-    "    # {\n",
-    "    #     \"name\": \"HTTPS_PROXY\",\n",
-    "    #     \"value\": \"http://<proxy_host>:<port>\"\n",
-    "    # },\n",
-    "    # {\n",
-    "    #     \"name\": \"http_proxy\",\n",
-    "    #     \"value\": \"http://<proxy_host>:<port>\"\n",
-    "    # },\n",
-    "    # {\n",
-    "    #     \"name\": \"https_proxy\",\n",
-    "    #     \"value\": \"http://<proxy_host>:<port>\"\n",
-    "    # },\n",
-    "    # {\n",
-    "    #     \"name\": \"no_proxy\",\n",
-    "    #     \"value\": \"<no_proxy_IPs_list>\"\n",
-    "    # },\n",
-    "    # {\n",
-    "    #     \"name\": \"NO_PROXY\",\n",
-    "    #     \"value\": \"<no_proxy_IPs_list>\"\n",
-    "    # }\n",
-    "]"
+    "env = []\n",
+    "if http_proxy:\n",
+    "    env.append({\"name\": \"HTTP_PROXY\", \"value\":http_proxy})\n",
+    "    env.append({\"name\": \"HTTPS_PROXY\", \"value\":http_proxy})\n",
+    "    env.append({\"name\": \"http_proxy\", \"value\":http_proxy})\n",
+    "    env.append({\"name\": \"https_proxy\", \"value\":http_proxy})\n",
+    "if no_proxy:\n",
+    "    env.append({\"name\": \"no_proxy\", \"value\":no_proxy})\n",
+    "    env.append({\"name\": \"NO_PROXY\", \"value\":no_proxy})"
    ]
   },
   {
@@ -372,10 +358,13 @@
    "outputs": [],
    "source": [
     "# This function converts Katib Experiment HP results to args.\n",
-    "def convert_katib_results(katib_results) -> str:\n",
+    "\n",
+    "from kfp import components\n",
+    "@dsl.component\n",
+    "def convert_katib_results(katib_results: dict) -> str:\n",
     "    import json\n",
     "    import pprint\n",
-    "    katib_results_json = json.loads(katib_results)\n",
+    "    katib_results_json = katib_results\n",
     "    print(\"Katib results:\")\n",
     "    pprint.pprint(katib_results_json)\n",
     "    best_hps = []\n",
@@ -388,12 +377,23 @@
     "    return \" \".join(best_hps)\n",
     "\n",
     "# You should define the TFJob name, namespace, number of training steps, output of Katib and model volume tasks in the arguments.\n",
-    "def create_tfjob_task(tfjob_name, tfjob_namespace, training_steps, katib_op, model_volume_op):\n",
+    "def create_tfjob_task(tfjob_name, tfjob_namespace, training_steps, katib_op, model_volume_op, http_proxy, no_proxy):\n",
     "    import json\n",
     "    # Get parameters from the Katib Experiment.\n",
     "    # Parameters are in the format \"--tf-learning-rate=0.01 --tf-batch-size=100\"\n",
-    "    convert_katib_results_op = components.func_to_container_op(convert_katib_results)\n",
-    "    best_hp_op = convert_katib_results_op(katib_op.output)\n",
+    "    best_hp_op = convert_katib_results(katib_results = katib_op.output)\n",
+    "    best_hp_op.set_caching_options(False)\n",
+    "    # Setting the proxy and no_proxy to allow download of the required packages inside the component.\n",
+    "    if no_proxy:\n",
+    "        no_proxy += ',.kubeflow'\n",
+    "        best_hp_op.set_env_variable('no_proxy', no_proxy)\n",
+    "        best_hp_op.set_env_variable('NO_PROXY', no_proxy)\n",
+    "    if http_proxy : \n",
+    "        best_hp_op.set_env_variable('http_proxy', http_proxy)\n",
+    "        best_hp_op.set_env_variable('https_proxy', http_proxy)\n",
+    "        best_hp_op.set_env_variable('HTTP_PROXY', http_proxy)\n",
+    "        best_hp_op.set_env_variable('HTTPS_PROXY', http_proxy)\n",
+    "    \n",
     "    best_hps = str(best_hp_op.output)\n",
     "\n",
     "    # Create the TFJob Chief and Worker specification with the best Hyperparameters.\n",
@@ -440,7 +440,7 @@
     "                    {\n",
     "                        \"name\": \"model-volume\",\n",
     "                        \"persistentVolumeClaim\": {\n",
-    "                            \"claimName\": str(model_volume_op.outputs[\"name\"])\n",
+    "                            \"claimName\": volume_str\n",
     "                        }\n",
     "                    },\n",
     "                    {\n",
@@ -497,7 +497,7 @@
     "                    {\n",
     "                        \"name\": \"model-volume\",\n",
     "                        \"persistentVolumeClaim\": {\n",
-    "                            \"claimName\": str(model_volume_op.outputs[\"name\"])\n",
+    "                            \"claimName\": volume_str\n",
     "                        }\n",
     "                    },\n",
     "                    {\n",
@@ -543,14 +543,14 @@
     "      apiVersion: \"{api_version}\"\n",
     "      kind: \"InferenceService\"\n",
     "      metadata:\n",
-    "        name: {model_name}\n",
-    "        namespace: {model_namespace}\n",
+    "        name: {name}\n",
+    "        namespace: {namespace}\n",
     "        annotations:\n",
     "          \"sidecar.istio.io/inject\": \"false\"\n",
     "      spec:\n",
     "        predictor:\n",
     "          tensorflow:\n",
-    "            storageUri: \"pvc://{str(model_volume_op.outputs[\"name\"])}/\"\n",
+    "            storageUri: \"pvc://{volume_str}/\"\n",
     "      '''\n",
     "\n",
     "    serving_launcher_op = components.load_component_from_file(serving_component_url)\n",
@@ -568,31 +568,25 @@
     "    name=name,\n",
     "    description=\"An end to end mnist example including hyperparameter tuning, train and inference\"\n",
     ")\n",
-    "def mnist_pipeline(name=name, namespace=namespace, training_steps=training_steps):\n",
+    "\n",
+    "def mnist_pipeline(name: str, namespace: str):\n",
     "\n",
     "    # Run the hyperparameter tuning with Katib.\n",
     "    katib_op = create_katib_experiment_task(name, namespace, training_steps)\n",
     "\n",
-    "    volume_str = f\"model-volume-{uuid}\"\n",
-    "    \n",
-    "    # Create volume to train and serve the model.\n",
-    "    model_volume_op = dsl.VolumeOp(\n",
-    "        name=volume_str,\n",
-    "        resource_name=volume_str,\n",
-    "        size=\"1Gi\",\n",
-    "        modes=dsl.VOLUME_MODE_RWO\n",
-    "    )\n",
+    "    model_volume_op =  volume_str\n",
     "\n",
     "    # Run the distributive training with TFJob.\n",
-    "    tfjob_op = create_tfjob_task(name, namespace, training_steps, katib_op, model_volume_op)\n",
+    "    tfjob_op = create_tfjob_task(name, namespace, training_steps, katib_op, model_volume_op, http_proxy, no_proxy)\n",
     "\n",
     "    # Create the KServe inference.\n",
     "    create_serving_task(name, namespace, tfjob_op, model_volume_op)\n",
     "    print(\"Volume: \", volume_str)\n",
-    "    \n",
-    "# Run the Kubeflow Pipeline in the user's namespace.\n",
-    "run_id = kfp_client.create_run_from_pipeline_func(mnist_pipeline, namespace=namespace, arguments={}).run_id\n",
     "\n",
+    "# Run the Kubeflow Pipeline in the user's namespace.\n",
+    "run_id = kfp_client.create_run_from_pipeline_func(pipeline_func=mnist_pipeline, namespace=namespace, \n",
+    "                                                  arguments={\"name\": name,\n",
+    "                                                             \"namespace\" : namespace}).run_id\n",
     "print(f\"Run ID: {run_id}\")\n",
     "\n",
     "kfp_client.wait_for_run_completion(run_id=run_id, timeout=36000)"
@@ -611,7 +605,7 @@
     "\n",
     "# Pipeline Run should be succeeded.\n",
     "kfp_run = kfp_client.get_run(run_id=run_id)\n",
-    "if kfp_run.run.status == \"Succeeded\":\n",
+    "if kfp_run.state == \"SUCCEEDED\":\n",
     "    print(f\"Run {run_id} has been Succeeded\\n\")\n",
     "\n",
     "    # Specify the image URL here.\n",
