--- a/Data-Science/MLflow/bike-sharing-prediction.ipynb
+++ b/Data-Science/MLflow/bike-sharing-prediction.ipynb
@@ -54,7 +54,7 @@
     "\n",
     "data[\"metadata\"][\"namespace\"] = namespace\n",
     "data[\"metadata\"][\"name\"] = model_name\n",
-    "data['spec']['predictor']['sklearn']['storageUri'] = storage_uri\n",
+    "data['spec']['predictor']['sklearn']['storageUri'] = f\"{storage_uri}/model.pkl\"\n",
     "\n",
     "# Save the JSON data to a file\n",
     "with open('kserve/kserve-mlflow-deploy.json', 'w') as file:\n",
@@ -86,7 +86,7 @@
     "DOMAIN_NAME = \"svc.cluster.local\" # change this to your domain for external access \n",
     "NAMESPACE = namespace\n",
     "DEPLOYMENT_NAME = model_name\n",
-    "MODEL_NAME = \"model\"\n",
+    "MODEL_NAME = model_name\n",
     "SVC = f'{DEPLOYMENT_NAME}-predictor.{NAMESPACE}.{DOMAIN_NAME}'\n",
     "URL = f\"https://{SVC}/v2/models/{MODEL_NAME}/infer\"\n",
     "\n",
@@ -167,7 +167,7 @@
     "#### Executing Inference Request (Example: Bike Sharing Data)\n",
     "\n",
     "```bash\n",
-    "curl --request POST \"https://$SVC.$NAMESPACE.$DOMAIN/v2/models/model/infer\" -k -H \"Authorization: Bearer $ACCESS_TOKEN\" --header 'Content-Type: application/json' --data-raw '{\"inputs\":[{\"name\":\"ndarray\",\"datatype\":\"FP32\",\"shape\":[2,12],\"data\":[[1, 2, 1, 0, 0, 6, 0, 1, 0.24, 0.2879, 0.81, 0.0000],[1, 5, 1, 0, 0, 6, 1, 1, 0.24, 0.2879, 0.81, 0.0000]]}]}'\n",
+    "curl --request POST \"https://$SVC.$NAMESPACE.$DOMAIN/v2/models/$MODEL_NAME/infer\" -k -H \"Authorization: Bearer $ACCESS_TOKEN\" --header 'Content-Type: application/json' --data-raw '{\"inputs\":[{\"name\":\"ndarray\",\"datatype\":\"FP32\",\"shape\":[2,12],\"data\":[[1, 2, 1, 0, 0, 6, 0, 1, 0.24, 0.2879, 0.81, 0.0000],[1, 5, 1, 0, 0, 6, 1, 1, 0.24, 0.2879, 0.81, 0.0000]]}]}'\n",
     "```\n",
     "\n",
     "#### Renewing Access Token Using Refresh Token (When Necessary)\n",
