--- a/Data-Science/Ray/Ray-GPU/ray-gpu-executor.ipynb
+++ b/Data-Science/Ray/Ray-GPU/ray-gpu-executor.ipynb
@@ -2,8 +2,8 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
-   "id": "d7492442-58af-446d-b082-cb24a04cf188",
+   "execution_count": 4,
+   "id": "5720543d-c305-48a0-ba68-3464915fa4f4",
    "metadata": {
     "tags": []
    },
@@ -18,7 +18,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "503b3235-08f3-47bb-8c98-86b54a19c0d6",
+   "id": "8e13f3f1-1b06-494f-8436-e8d9d04689c2",
    "metadata": {
     "tags": []
    },
@@ -33,8 +33,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
-   "id": "e377061e-1b48-4193-88bb-6d24732fb0cb",
+   "execution_count": 7,
+   "id": "c78908eb-0ff0-46c6-8f22-9fa3c114853a",
    "metadata": {
     "tags": []
    },
@@ -43,36 +43,37 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2024-03-13 20:17:12,319\tINFO dashboard_sdk.py:338 -- Uploading package gcs://_ray_pkg_cadba0a68a4c4235.zip.\n",
-      "2024-03-13 20:17:12,321\tINFO packaging.py:530 -- Creating a file package for local directory './'.\n"
+      "2024-07-15 06:07:37,381\tINFO dashboard_sdk.py:338 -- Uploading package gcs://_ray_pkg_b78492fdea11c7d4.zip.\n",
+      "2024-07-15 06:07:37,382\tINFO packaging.py:530 -- Creating a file package for local directory './'.\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Ray job submitted with job_id: raysubmit_qLSWwYQC4S3TrxsV\n",
-      "2024-03-13 13:21:58.893801: I tensorflow/core/platform/cpu_feature_guard.cc:193] This TensorFlow binary is optimized with oneAPI Deep Neural Network Library (oneDNN) to use the following CPU instructions in performance-critical operations:  AVX2 AVX512F AVX512_VNNI FMA\n",
-      "To enable them in other operations, rebuild TensorFlow with the appropriate compiler flags.\n",
-      "2024-03-13 13:21:59.007216: I tensorflow/core/util/port.cc:104] oneDNN custom operations are on. You may see slightly different numerical results due to floating-point round-off errors from different computation orders. To turn them off, set the environment variable `TF_ENABLE_ONEDNN_OPTS=0`.\n",
-      "2024-03-13 13:21:59.741023: W tensorflow/compiler/xla/stream_executor/platform/default/dso_loader.cc:64] Could not load dynamic library 'libnvinfer.so.7'; dlerror: libnvinfer.so.7: cannot open shared object file: No such file or directory; LD_LIBRARY_PATH: /usr/local/nvidia/lib:/usr/local/nvidia/lib64\n",
-      "2024-03-13 13:21:59.741159: W tensorflow/compiler/xla/stream_executor/platform/default/dso_loader.cc:64] Could not load dynamic library 'libnvinfer_plugin.so.7'; dlerror: libnvinfer_plugin.so.7: cannot open shared object file: No such file or directory; LD_LIBRARY_PATH: /usr/local/nvidia/lib:/usr/local/nvidia/lib64\n",
-      "2024-03-13 13:21:59.741309: W tensorflow/compiler/tf2tensorrt/utils/py_utils.cc:38] TF-TRT Warning: Cannot dlopen some TensorRT libraries. If you would like to use Nvidia GPU with TensorRT, please make sure the missing libraries mentioned above are installed properly.\n",
+      "Ray job submitted with job_id: raysubmit_SJBrv3Cb9DGXn4PN\n",
+      "2024-07-14 23:07:37,403\tINFO job_manager.py:530 -- Runtime env is setting up.\n",
+      "2024-07-14 23:08:28.541383: I tensorflow/core/util/port.cc:110] oneDNN custom operations are on. You may see slightly different numerical results due to floating-point round-off errors from different computation orders. To turn them off, set the environment variable `TF_ENABLE_ONEDNN_OPTS=0`.\n",
+      "2024-07-14 23:08:28.582176: I tensorflow/core/platform/cpu_feature_guard.cc:182] This TensorFlow binary is optimized to use available CPU instructions in performance-critical operations.\n",
+      "To enable the following instructions: AVX2 AVX512F AVX512_VNNI FMA, in other operations, rebuild TensorFlow with the appropriate compiler flags.\n",
+      "2024-07-14 23:08:29.943553: W tensorflow/compiler/tf2tensorrt/utils/py_utils.cc:38] TF-TRT Warning: Could not find TensorRT\n",
       "Num GPUs Available:  1\n",
       "TensorFlow will run on GPU.\n",
-      "2024-03-13 13:22:01.258384: I tensorflow/core/common_runtime/gpu/gpu_device.cc:1613] Created device /job:localhost/replica:0/task:0/device:GPU:0 with 38375 MB memory:  -> device: 0, name: NVIDIA A100-PCIE-40GB, pci bus id: 0000:86:00.0, compute capability: 8.0\n",
+      "2024-07-14 23:08:32.217517: I tensorflow/core/common_runtime/gpu/gpu_device.cc:1639] Created device /job:localhost/replica:0/task:0/device:GPU:0 with 3234 MB memory:  -> device: 0, name: NVIDIA A100-PCIE-40GB MIG 1g.5gb, pci bus id: 0000:86:00.0, compute capability: 8.0\n",
       "input: (_Arg): /job:localhost/replica:0/task:0/device:GPU:0\n",
-      "2024-03-13 13:22:01.290481: I tensorflow/core/common_runtime/placer.cc:114] input: (_Arg): /job:localhost/replica:0/task:0/device:GPU:0\n",
+      "2024-07-14 23:08:32.244183: I tensorflow/core/common_runtime/placer.cc:114] input: (_Arg): /job:localhost/replica:0/task:0/device:GPU:0\n",
       "_EagerConst: (_EagerConst): /job:localhost/replica:0/task:0/device:GPU:0\n",
-      "2024-03-13 13:22:01.290685: I tensorflow/core/common_runtime/placer.cc:114] _EagerConst: (_EagerConst): /job:localhost/replica:0/task:0/device:GPU:0\n",
+      "2024-07-14 23:08:32.244195: I tensorflow/core/common_runtime/placer.cc:114] _EagerConst: (_EagerConst): /job:localhost/replica:0/task:0/device:GPU:0\n",
       "output_RetVal: (_Retval): /job:localhost/replica:0/task:0/device:GPU:0\n",
-      "2024-03-13 13:22:01.290904: I tensorflow/core/common_runtime/placer.cc:114] output_RetVal: (_Retval): /job:localhost/replica:0/task:0/device:GPU:0\n",
+      "2024-07-14 23:08:32.244199: I tensorflow/core/common_runtime/placer.cc:114] output_RetVal: (_Retval): /job:localhost/replica:0/task:0/device:GPU:0\n",
+      "2024-07-14 23:08:32.279047: I tensorflow/core/common_runtime/eager/execute.cc:1678] Executing op _EagerConst in device /job:localhost/replica:0/task:0/device:GPU:0\n",
       "x: (_Arg): /job:localhost/replica:0/task:0/device:GPU:0\n",
-      "2024-03-13 13:22:01.776442: I tensorflow/core/common_runtime/placer.cc:114] x: (_Arg): /job:localhost/replica:0/task:0/device:GPU:0\n",
+      "2024-07-14 23:08:32.281067: I tensorflow/core/common_runtime/placer.cc:114] x: (_Arg): /job:localhost/replica:0/task:0/device:GPU:0\n",
       "Square: (Square): /job:localhost/replica:0/task:0/device:GPU:0\n",
-      "2024-03-13 13:22:01.776627: I tensorflow/core/common_runtime/placer.cc:114] Square: (Square): /job:localhost/replica:0/task:0/device:GPU:0\n",
+      "2024-07-14 23:08:32.281077: I tensorflow/core/common_runtime/placer.cc:114] Square: (Square): /job:localhost/replica:0/task:0/device:GPU:0\n",
       "y_RetVal: (_Retval): /job:localhost/replica:0/task:0/device:GPU:0\n",
-      "2024-03-13 13:22:01.776819: I tensorflow/core/common_runtime/placer.cc:114] y_RetVal: (_Retval): /job:localhost/replica:0/task:0/device:GPU:0\n",
+      "2024-07-14 23:08:32.281081: I tensorflow/core/common_runtime/placer.cc:114] y_RetVal: (_Retval): /job:localhost/replica:0/task:0/device:GPU:0\n",
+      "2024-07-14 23:08:32.281974: I tensorflow/core/common_runtime/eager/execute.cc:1678] Executing op Square in device /job:localhost/replica:0/task:0/device:GPU:0\n",
       "Original data sample: [ 1  2  3  4  5  6  7  8  9 10]\n",
       "Squared data sample: [  1.   4.   9.  16.  25.  36.  49.  64.  81. 100.]\n",
       "\n"
@@ -84,10 +85,12 @@
     "job_id = client.submit_job(\n",
     "    entrypoint=\"python ray-gpu-example.py\",\n",
     "    runtime_env={\n",
-    "        \"working_dir\": \"./\"\n",
+    "        \"working_dir\": \"./\",\n",
+    "        \"pip\": [\"tensorflow==2.13.0\"],\n",
+    "        \"env_vars\": {\"http_proxy\":\"http://10.78.90.46:80\",\"https_proxy\":\"http://10.78.90.46:80\",\"HTTP_PROXY\":\"http://10.78.90.46:80\",\"HTTPS_PROXY\":\"http://10.78.90.46:80\"}\n",
     "    },\n",
     "    entrypoint_num_gpus = 1,\n",
-    "    entrypoint_num_cpus = 1,\n",
+    "    entrypoint_num_cpus = 1\n",
     ")\n",
     "\n",
     "print(f\"Ray job submitted with job_id: {job_id}\")\n",
@@ -109,13 +112,23 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "09813fd1-0f4a-4890-abb7-5523fd262ec5",
-   "metadata": {},
+   "id": "92f248b7-74d0-45fb-becf-01b8dfa5f6d8",
+   "metadata": {
+    "tags": []
+   },
    "outputs": [],
    "source": [
     "# Disconnect from the Ray cluster\n",
     "ray.shutdown()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "4eee477f-a3c9-44c1-9804-b638b0769548",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
@@ -134,7 +147,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.13"
+   "version": "3.11.6"
   }
  },
  "nbformat": 4,
